# scamp_extensions

./: .build.yml  README.md  setup.cfg  setup.py
examples/: key_plane_example.py  l_system_example.py  multipreset_example.py  note_graph_example.py  raffi_conway.py  scale_example.py  supercollider_example.py  supercollider_vibrato_instrument.py  time_varying_parameter_example.py
misc/junk/: barlicityMessy.py  indispensability.py  multi_preset_instrument_with_playback_properties.py  note_graph.py  oldKeyPlane.py  sc_instrument.py
misc/junk/note_graph/: fives.json  mp.json  sines.json
scamp_extensions/: __init__.py  barlicity.py  utils.py
scamp_extensions/composers/: __init__.py  barlicity.py
scamp_extensions/engraving/: __init__.py  note_graph.py
scamp_extensions/interaction/: __init__.py  key_plane.py
scamp_extensions/parsing/: __init__.py  midi.py
scamp_extensions/pitch/: __init__.py  interval.py  scale.py  utilities.py
scamp_extensions/playback/: __init__.py  multi_preset_instrument.py
scamp_extensions/playback/supercollider/: scInit.scd  sc_lang.py  sc_playback_implementation.py  (+1 more)
scamp_extensions/process/: __init__.py  _pykov.py  generators.py  l_systems.py  markov.py
scamp_extensions/rhythm/: __init__.py  boolean_streamer.py  indispensability.py  indispensibility.py  metric_structure.py
scamp_extensions/supercollider/: __init__.py  scInit.scd  sc_instrument.py  sc_lang.py  sc_playback_implementation.py
scamp_extensions/utilities/: __init__.py  math.py  sequences.py  time_varying_parameter.py
supercollider/: sc_instrument.py
(+2 files in other folders)
