[metadata]
name = scamp_extensions
description = Extensions to SCAMP (Suite for Computer-Assisted Music in Python)
long_description = file: README.md
long_description_content_type = text/markdown
author = Marc Evanstein
author_email = marc@marcevanstein.com
url = https://git.sr.ht/~marcevanstein/scamp_extensions
license = GNU GPL Version 3
version = 0.3.5.post1
classifier =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
python_requires = >=3.10
install_requires =
    scamp >= 0.9.2

[options.package_data]
scamp_extensions =
    playback/supercollider/*.scd
    playback/supercollider/*.yaml
    playback/supercollider/scampExtensions/*
